feat(post): support show and edit thread price
Note that free area in editor is not supported.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -442,6 +442,12 @@
     },
     "permDialog": {
       "title": "Set read perm"
+    },
+    "priceDialog": {
+      "title": "Set price",
+      "entryTooltip": "Set thread price",
+      "maximum": "Maximum value 65535",
+      "invalidPrice": "invalid price"
     }
   },
   "chatHistoryPage": {
