feat(settings): warn proxy option not set when enabled and not set

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -139,6 +139,7 @@
         "host": "Host",
         "port": "Port",
         "disabled": "Proxy is disabled",
+        "notSet": "Proxy address not set",
         "invalidHostOrIp": "Invalid host or IP",
         "invalidPort": "Invalid port",
         "testConnection": {
