feat(*): multi-user target, part 1

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -40,6 +40,14 @@
   },
   "settingsPage": {
     "title": "Settings",
+    "accountSection": {
+      "title": "Account",
+      "mgmt": "Account management",
+      "switchAccount": "Switch account",
+      "loginAnother": "Login another account",
+      "logout": "Logout",
+      "online": "Online"
+    },
     "appearanceSection": {
       "title": "Appearance",
       "themeMode": {
