feat(settings): multi-user target, part 4/4

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -44,6 +44,7 @@
       "title": "Account",
       "mgmt": "Account management",
       "switchAccount": "Switch account",
+      "switchSuccess": "Switch success",
       "loginAnother": "Login another account",
       "logout": "Logout",
       "online": "Online"
