--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -44,6 +44,7 @@
       "title": "账号",
       "mgmt": "账号管理",
       "switchAccount": "切换账号",
+      "switchSuccess": "切换成功",
       "loginAnother": "登录其他账号",
       "logout": "退出登录",
       "online": "在线"
