feat(*): auto checkin, part 1, functionality
This commit addded the functionality to do automatically checkin for all
recorded users.

Feature is implemented by a new bloc: `AutoCheckinBloc` lives in
top-level of the app and new cubit `RootCubit` as well as new page
`RootPage` also top-level.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -679,5 +679,21 @@
     "url": "Url",
     "unsupportedUrl": "Unsupported url",
     "open": "Open"
+  },
+  "globalStatePage": {
+    "autoCheckinRunning": "Running auto checkin...",
+    "autoCheckinFinished": "Auto checkin finished",
+    "viewDetail": "View detail"
+  },
+  "autoCheckinPage": {
+    "title": "Auto checkin",
+    "detail": "Automatically checkin for all accounts recorded",
+    "running": "Running progress...",
+    "user": {
+      "running": "Pending",
+      "success": "Success",
+      "failure": "Failure",
+      "notAuthed": "Need login"
+    }
   }
 }
