feat(*): auto checkin, part 2/2

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -690,6 +690,7 @@
     "detail": "Automatically checkin for all accounts recorded",
     "running": "Running progress...",
     "user": {
+      "waiting": "Waiting",
       "running": "Pending",
       "success": "Success",
       "failure": "Failure",
