--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -690,6 +690,7 @@
     "detail": "为所有登记过的用户自动签到",
     "running": "进行中",
     "user": {
+      "waiting": "等待中",
       "running": "进行中",
       "success": "成功",
       "failure": "失败",
