--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -690,6 +690,7 @@
     "detail": "為所有已登記的使用者自動簽到",
     "running": "進行中。。。",
     "user": {
+      "waiting": "等待中",
       "running": "進行中",
       "success": "成功",
       "failure": "失敗",
