feat(*): scheduled pull actions, part 5
This commit added logic and presentation reaction for loading
notification related updates. Now the notification unread info or call
it status is stored in a separate bloc, means dynamic update on notice
button is implemented in a bloc way. Also added a bridge repository to
update the unread info when user operated notifications or data fetched
from server side.

`NotificationBloc` has been uplifted to app-wide.

Fixes #75

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -367,6 +367,10 @@
       "titleRate": "Rate info",
       "titleMention": "Reply mention",
       "postNotFound": "Content not found"
+    },
+    "cardMenu": {
+      "markAsRead": "Mark as read",
+      "markAsUnread": "Mark as unread"
     }
   },
   "searchPage": {
