feat(*): scheduled pull actions, part 7
This commit add the functionality to mark all messages of a type os
read in the notification page.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -378,7 +378,10 @@
     },
     "cardMenu": {
       "markAsRead": "Mark as read",
-      "markAsUnread": "Mark as unread"
+      "markAsUnread": "Mark as unread",
+      "markAllNoticeAsRead": "Mark all notice as read",
+      "markAllPersonalMessageAsRead": "Mark all PM as read",
+      "markAllBroadcastMessageAsRead": "Mark all BM as read"
     }
   },
   "searchPage": {
