--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -378,7 +378,10 @@
     },
     "cardMenu": {
       "markAsRead": "标为已读",
-      "markAsUnread": "标为未读"
+      "markAsUnread": "标为未读",
+      "markAllNoticeAsRead": "标记所有提醒为已读",
+      "markAllPersonalMessageAsRead": "标记所有私人消息为已读",
+      "markAllBroadcastMessageAsRead": "标记所有公共消息为已读"
     }
   },
   "searchPage": {
