feat(*): scheduled pull actions, part 8/8
This commit completed scheduled notice pulling action feature, pushing
local notification if any unread notice fetched in current notice fetch.

Currently only push local notification on Android platform and only in
foreground.

Closes #8

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -719,5 +719,18 @@
       "failure": "Failure",
       "notAuthed": "Need login"
     }
+  },
+  "localNotification": {
+    "channelName": "New auto sync notice",
+    "channelDesc": "Received new notice when auto sync",
+    "ticker": "New notice",
+    "notice": {
+      "title": "New notice",
+      "detail": {
+        "notice": "You received ${noticeCount: int} notice, ${pmCount: int} PMs, ${bmCount: int} BMs\n[Notice]${msg: String}",
+        "pm": "You received ${noticeCount: int} notice, ${pmCount: int} PMs, ${bmCount: int} BMs\n[PM]${user: String}: ${msg: String}",
+        "bm": "You received ${noticeCount: int} notice, ${pmCount: int} PMs, ${bmCount: int} BMs\n[BM]${msg: String}"
+      }
+    }
   }
 }
