fix(*): fix negative elapsed time
Negative elapsed time appears because server time gains earlier than
real time. This commit covered negative ones with opaque description.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -18,9 +18,11 @@
     "copiedToClipboard": "Copied to clipboard",
     "affectAfterRestart": "Changes will take effect after the app restarted",
     "never": "Never",
-    "seconds(rich)": "$value seconds",
-    "minutes(rich)": "$value minutes",
-    "hours(rich)": "$value hours"
+    "seconds": "${value: int} seconds",
+    "minutes": "${value: int} minutes",
+    "hours": "${value: int} hours",
+    "days": "${value: int} days",
+    "now": "Now"
   },
   "navigation": {
     "homepage": "Home",
