feat(notification): add unread notice filter

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -354,6 +354,10 @@
   },
   "noticePage": {
     "title": "Notifications",
+    "appBar": {
+      "unread": "unread",
+      "unreadDetail": "Only show unread"
+    },
     "noticeTab": {
       "title": "Notice",
       "replyBody(rich)": "replied in $threadTitle",
