--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -354,6 +354,10 @@
   },
   "noticePage": {
     "title": "通知",
+    "appBar": {
+      "unread": "未讀",
+      "unreadDetail": "只顯示未讀"
+    },
     "noticeTab": {
       "title": "提醒",
       "replyBody(rich)": "在 $threadTitle 中回覆了",
