--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -394,7 +394,11 @@
       "markAsUnread": "Mark as unread",
       "markAllNoticeAsRead": "Mark all notice as read",
       "markAllPersonalMessageAsRead": "Mark all PM as read",
-      "markAllBroadcastMessageAsRead": "Mark all BM as read"
+      "markAllBroadcastMessageAsRead": "Mark all BM as read",
+      "delete": {
+        "title": "Delete message",
+        "detail": "Are you sure to delete this message? this action can not be undone"
+      }
     }
   },
   "searchPage": {
