--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -1,6 +1,6 @@
 {
   "locale": "English",
-  "appName": "TSDM Client",
+  "appName": "TSDM",
   "general": {
     "ok": "Ok",
     "cancel": "Cancel",
