--- a/lib/i18n/zh-CN.i18n.json
+++ b/lib/i18n/zh-CN.i18n.json
@@ -202,7 +202,10 @@
     "othersSection": {
       "title": "其他",
       "about": "关于",
-      "upgrade": "更新",
+      "update": {
+        "title": "获取更新",
+        "fDroidTip": "如果此应用是从F-Droid安装的，建议依然走F-Droid升级"
+      },
       "changelog": "更新日志"
     }
   },
@@ -218,26 +221,6 @@
     "flutterVersion": "Flutter版本",
     "dartVersion": "Dart版本",
     "license": "版权"
-  },
-  "upgradePage": {
-    "title": "更新",
-    "description": "检查并下载最新版本",
-    "currentVersion": "当前版本: $currentVersion",
-    "latestVersion": "最新版本: $latestVersion",
-    "releaseNotes": "更新记录",
-    "fetchingData": "获取中",
-    "download": "下载",
-    "savePath": "保存路径",
-    "storagePermissionNotGranted": "下载失败，因为未授予存储权限",
-    "saveTo": "保存到 $path",
-    "failedToDownloadDialog": {
-      "title": "下载失败",
-      "description": "没有找到适合当前系统的安装包"
-    },
-    "fullChangelogDialog": {
-      "title": "更新历史",
-      "loading": "加载中"
-    }
   },
   "loginPage": {
     "title": "登录天使动漫",
