feat(packet): add packet statistics detail page

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -752,5 +752,8 @@
   "debugLogPage": {
     "title": "Log",
     "copyLogToClipboard": "Log copied to clipboard"
+  },
+  "packetDetailPage": {
+    "title": "Packet details"
   }
 }
