--- a/lib/i18n/zh-TW.i18n.json
+++ b/lib/i18n/zh-TW.i18n.json
@@ -752,5 +752,8 @@
   "debugLogPage": {
     "title": "日誌",
     "copyLogToClipboard": "日誌已複製到剪切板"
+  },
+  "packetDetailPage": {
+    "title": "紅包詳情"
   }
 }
