feat(packet): add statistics row
Sorting order is disable for now.

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -754,6 +754,7 @@
     "copyLogToClipboard": "Log copied to clipboard"
   },
   "packetDetailPage": {
-    "title": "Packet details"
+    "title": "Packet details",
+    "statistics": "${users: int} users got ${coins: int} coins in ${time: String}"
   }
 }
