--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -113,7 +113,11 @@
       "unreadNoticeBadge": "Unread notice badge",
       "unreadPersonalMessageBadge": "Unread personal message badge",
       "unreadBroadcastMessageBadge": "Unread broadcast message badge",
-      "unreadBadgeLimitation": "Show badge unread notice on card in notification, read/unread status only valid on current machine"
+      "unreadBadgeLimitation": "Show badge unread notice on card in notification, read/unread status only valid on current machine",
+      "fontFamily": {
+        "title": "Font family",
+        "dialogTitle": "Choose font"
+      }
     },
     "windowSection": {
       "title": "Window",
