feat(debug): copy database dir path

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -201,7 +201,8 @@
       },
       "viewLog": {
         "title": "View log"
-      }
+      },
+      "copyDatabaseDir": "Copy database path"
     },
     "othersSection": {
       "title": "Others",
