feat(settings): import and export data
Support importing and exporting database file.

Till now the file is not validated when importing, should be implemented
before next release, if want to.

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -186,6 +186,12 @@
           "connected": "Proxy is running",
           "disconnected": "Proxy may not running"
         }
+      },
+      "exportData": "Export data",
+      "importData": {
+        "title": "Import data",
+        "invalidData": "Invalid data",
+        "tip": "All existing data will be OVERWRITTEN, and a restart is needed to take effect.\nApp will exit if succeed, continue?"
       }
     },
     "debugSection": {
